Prevent image from overflowing width

--- a/packages/components/src/focal-point-picker/style.scss
+++ b/packages/components/src/focal-point-picker/style.scss
@@ -25,6 +25,10 @@
 	min-width: 100%;
 }
 
+.image {
+	max-width: 100%;
+}
+
 .video {
 	height: 100%;
 	max-width: 100%;
